--- a/css/olymp.css
+++ b/css/olymp.css
@@ -1,4 +1,6 @@
 body {
+	position: relative;
+	z-index: 0;
 	font-family: 'ALS Schlange Sans', sans-serif;
 	line-height: 16px;
 	font-weight: normal;
@@ -36,7 +38,6 @@ body {
 	padding-left: 20px;
 	padding-right: 20px;
 	text-align: center;
-	z-index: 1;
 }
 
 .left {
@@ -85,8 +86,14 @@ img {
 	text-decoration: underline;
 }
 #stars {
+	position: absolute;
+	margin-bottom: 0;
+	margin-top: 0;
+	margin-right: 0;
+	margin-left: 0;
 	z-index: -1;
 	width: 100%;
+	height: auto;
 	-webkit-transition: all 0.4s ease-in-out;
 	-moz-transition: all 0.4s ease-in-out;
 	-ms-transition: all 0.4s ease-in-out;
