--- a/css/als_sans.css
+++ b/css/als_sans.css
@@ -4,4 +4,5 @@
     src: url('../fonts/font.eot?#iefix') format('embedded-opentype'), url('../fonts/font.svg#als_schlange_sansregular') format('svg'), url('../fonts/font.woff') format('woff'), url('../fonts/font.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
+    font-display: swap;
 }
