--- a/css/olymp.css
+++ b/css/olymp.css
@@ -25,8 +25,10 @@ body {
 }
 .container {
 	width: 100%;
+	flex: 0 1 auto;
 }
 .main {
+	display: table;
 	font-size: 16px;
 	margin-right: auto;
 	margin-left: auto;
@@ -66,12 +68,25 @@ body {
 	color: #0045ad;
 	text-decoration: underline;
 }
+.copyright {
+	position: fixed;
+	left:0;
+	bottom:0;
+	width: 100%;
+	font-size: 12px;
+	text-align: center;
+	margin-bottom: 5px;
+}
+.copyright a {
+	color: #efefefa6;
+	text-decoration: none;
+}
 @media (orientation: landscape) {
 .main {
 	width: 60%;
 }
 .left {
-	margin-left: 20px;
+	margin-left: 1%;
 	margin-right: auto;
 	float: left;
 	width: 15%;
