--- a/css/olymp.css
+++ b/css/olymp.css
@@ -6,13 +6,14 @@ body {
 	font-weight: normal;
 	color: #313131;
 	text-decoration: none;
-	padding: 0px;
-	margin: 0px;
+	padding: 0;
+	margin: 0;
 	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 	background-repeat: no-repeat;
 	background-size: 400% 800%;
 	animation: gradient 15s ease infinite;
 }
+
 @keyframes gradient {
 	0% {
 		background-position: 0% 50%;
@@ -24,97 +25,69 @@ body {
 		background-position: 0% 50%;
 	}
 }
+
 .main {
 	display: table;
 	font-size: 16px;
-	margin-right: 15%;
-	margin-left: 15%;
-	margin-top: 0px;
-	margin-bottom: 0px;
+	margin: 0 15% 0 15%;
+	padding: 10px 20px 10px 20px;
 	background: linear-gradient(90deg, #efefef, #b9deed);
 	background-repeat: no-repeat;
-	background-position: center top;
-	padding-top: 10px;
-	padding-left: 20px;
-	padding-right: 20px;
-	padding-bottom: 20px;
+	background-size: cover;
 	text-align: center;
 }
+
 .main tr {
 	height: 52px;
 }
+
 .main table {
 	table-layout: auto;
 	width: 100%;
 }
+
 .main table caption {
 	padding-bottom: 15px;
 	font-weight: bold;
 	font-size: 20px;
 }
+
 .main table a {
 	white-space: nowrap;
 	color: #030d10;
 	text-decoration: none;
 }
+
 .main table a:visited {
 	color: #8a00ad;
 	text-decoration: none;
 }
+
 .main table a:hover {
 	color: #0045ad;
 	text-decoration: underline;
 }
+
 .copyright {
 	position: fixed;
-	left:0;
-	bottom:0;
+	left: 0;
+	bottom: 0;
 	width: 100%;
 	font-size: 12px;
 	text-align: center;
 	margin-bottom: 5px;
 }
+
 .copyright a {
 	color: #efefefa6;
 	text-decoration: none;
 }
-@media (orientation: landscape) {
-.main {
-	width: 65%;
-}
-.left {
-	float: left;
-	width: 15%;
-	margin-top: 0px;
-	margin-right: 10px;
-	margin-left: 10px
-}
-img {
-	width: 100%;
-	height: auto;
-}
-.right {
-	font-size: 15px;
-	float: right;
-	width: 15%;
-	margin-top: 25px;
-}
-.right a:hover {
-	color: #b9deed;
-	text-decoration: none;
-}
-.right a {
-	color: #efefef;
-	text-decoration: none;
-}
+
 #stars {
 	position: absolute;
-	left: 0px;
-	top: 0px;
-	margin-bottom: 0;
-	margin-top: 0;
-	margin-right: 0;
-	margin-left: 0;
+	left: 0;
+	top: 0;
+	margin: 0;
 	z-index: -1;
 	width: 100%;
 	height: auto;
@@ -124,19 +97,46 @@ img {
 	-o-transition: all 0.4s ease-in-out;
 	transition: all 0.4s ease-in-out;
 }
+
+@media (orientation: landscape) {
+	.main {
+		width: 65%;
+	}
+	.left {
+		float: left;
+		width: 15%;
+		margin: 0 10px 0 10px;
+	}
+	img {
+		width: 100%;
+		height: auto;
+	}
+	.right {
+		font-size: 15px;
+		float: right;
+		width: 15%;
+		margin-top: 25px;
+	}
+	.right a:hover {
+		color: #b9deed;
+		text-decoration: none;
+	}
+	.right a {
+		color: #efefef;
+		text-decoration: none;
+	}
 }
+
 @media (orientation: portrait) {
-.main {
-	margin: 0;
-	padding-right: 20px;
-	padding-left: 20px;
-	padding-bottom: 20px;
-	width: 100%;
-}
-.main p {
-	margin-bottom: 0px;
-}
-.right, .left, #stars {
-	display: none;
-}
+	.main {
+		position: relative;
+		top: 0;
+		left: 0;
+		margin: 0;
+		width: 100%;
+	}
+	.right,
+	.left {
+		display: none;
+	}
 }
