--- a/css/olymp.css
+++ b/css/olymp.css
@@ -1,3 +1,11 @@
+html {
+	height: 100%;
+	width: 100%;
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-repeat: no-repeat;
+	background-size: 400% 800%;
+	animation: gradient 15s ease infinite;
+}
 body {
 	position: relative;
 	z-index: 0;
@@ -8,10 +16,6 @@ body {
 	text-decoration: none;
 	padding: 0;
 	margin: 0;
-	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-	background-repeat: no-repeat;
-	background-size: 400% 800%;
-	animation: gradient 15s ease infinite;
 }
 
 @keyframes gradient {
@@ -29,7 +33,7 @@ body {
 .main {
 	display: table;
 	font-size: 16px;
-	margin: 0 15% 0 15%;
+	margin: 0;
 	padding: 10px 20px 10px 20px;
 	background: linear-gradient(90deg, #efefef, #b9deed);
 	background-repeat: no-repeat;
@@ -133,7 +137,7 @@ body {
 		top: 0;
 		left: 0;
 		margin: 0;
-		width: 100%;
+		width: auto;
 	}
 	.right,
 	.left {
