--- a/css/olymp.css
+++ b/css/olymp.css
@@ -105,7 +105,7 @@ a {
 
 @media (orientation: landscape) {
 	.main {
-		width: auto;
+		width: 65%;
 		position: relative;
 		margin: 0px 16% 0px 16%;
 	}
