--- a/css/olymp.css
+++ b/css/olymp.css
@@ -31,13 +31,51 @@ body {
 }
 
 .main {
-	display: table;
 	font-size: 16px;
 	padding: 10px 20px 10px 20px;
 	background: linear-gradient(90deg, #efefef, #b9deed);
 	background-repeat: no-repeat;
 	background-size: cover;
 	text-align: center;
+}
+
+.indata {
+	display: flex;
+}
+
+.indata div {
+	padding: 1em;
+	border: 1px solid #9e9e9e;
+	border-radius: 1em;
+	margin: auto;
+}
+.indata form {
+	display: inline-block;
+	margin: 0 auto;
+	font-size: large;
+	width: 320px;
+}
+
+.indata form label {
+	display: inline-block;
+	text-align: left;
+	width: 150px;
+}
+
+.ege form input {
+	width: 48px;
+}
+
+.ege form label {
+	width: 150px;
+}
+
+#search_form input{
+	width: 125px;
+}
+
+#result {
+	display: table;
 }
 
 a {
