--- a/css/olymp.css
+++ b/css/olymp.css
@@ -93,6 +93,10 @@ a {
 	height: 52px;
 }
 
+.main tbody tr:hover {
+	background: #9ccfec;
+}
+
 .main table {
 	table-layout: auto;
 	width: 100%;
@@ -118,8 +122,9 @@ a {
 	text-decoration: underline;
 }
 
-th:not(#stream) {
+th:not(#stream):hover {
 	cursor: pointer;
+	background: #9ccfec;
 }
 
 th.sorted[data-order="-1"] {
@@ -244,7 +249,7 @@ th.sorted[data-order="1"] {
 }
 
 @media (orientation: portrait) {
-	.main {
+	.main table {
 		overflow: scroll;
 	}
 	.indata div {
